# rustviz

./: .dockerignore  .envrc.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  INSTRUCTIONS.md  LICENSE  LICENSE.txt  Lifetime_Annotation_tutorial.md  README.md  SECURITY.md  code_notes_alaric.md  fly.toml  lifetime_annotation_manual.md  rustviz.bib  setup.sh  svg 2.txt  svg.txt  test_log.md  uninstall.sh
RustvizParse/: Cargo.toml
RustvizParse/src/: main.rs  parse.rs
mdbook-rustviz/: .rustfmt.toml  Cargo.toml  README.md
mdbook-rustviz/src/: cfg.rs  cli.rs  main.rs  preprocessor.rs
mdbook-rustviz/test-book/: book.toml
mdbook-rustviz/test-book/book/: 404.html  additional_resources.html  borrowing.html  index.html  ownership.html  print.html  rust-basics.html  searcher-c2a407aa.js  searchindex-89b00d64.js  structs.html  toc-7537fadf.js  toc.html  vectors.html
mdbook-rustviz/test-book/mdbook_plugin/: book.js  helpers.js
mdbook-rustviz/test-book/src/: SUMMARY.md  additional_resources.md  borrowing.md  motivation.md  ownership.md  rust-basics.md  structs.md  testing.md  vectors.md
playground/: Cargo.toml  README.md  SECURITY.md
playground/deploy/: Dockerfile  deploy.sh  entrypoint.sh  fly.toml  shutdown.sh
playground/frontend/: .env.pages  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
playground/frontend/scripts/: prerender.ts
playground/frontend/src/: App.tsx  ErrorCard.css  ErrorCard.tsx  examples.ts  index.css  normalizeCode.ts  prerendered.json  setup.ts  svgCache.ts  userExamples.ts  vite-env.d.ts
playground/runner/: Dockerfile  rv-runner.sh
playground/src/: main.rs
rustviz-cli/: Cargo.toml  README.md
rustviz-cli/src/: main.rs
rustviz-lib/: Cargo.toml  README.md  rust-toolchain.toml
rustviz-lib/examples/: render_to_files.rs
rustviz-lib/src/: helpers.js  lib.rs
rustviz-lib/tests/: borrow.rs  corpus.rs
rustviz-plugin/: Cargo.toml  README.md
rustviz-plugin/resources/aquascope/: Cargo.toml
rustviz-plugin/resources/aquascope_workspace_utils/: Cargo.toml  rust-toolchain.toml
rustviz-plugin/resources/rustviz-library/: .gitignore
rustviz-plugin/src/: annotated_source_gen.rs  expr_visitor.rs  expr_visitor_utils.rs  mir_data.rs  plugin.rs  utils.rs  visitor.rs
rustviz-plugin/src/rustviz_library/: mod.rs  rv.rs
rustviz-plugin/src/svg_generator/: data.rs  hover_messages.rs
rustviz-plugin/tests/: README.md  advanced_deref.rs  advanced_deref2.rs  advanced_deref3.rs  aliasing2.rs  anonymous_call.rs  anonymous_deref.rs  anonymous_fnparam.rs  assert_call_dot.rs  assign_chained_field.rs  assign_index.rs  assign_tuple_destructure.rs  basic_deref2.rs  basic_deref3.rs  basic_deref5.rs  basic_for2.rs  basic_if.rs  basic_if10.rs  basic_if11.rs  basic_if12.rs  basic_if2.rs  basic_if4.rs  basic_if5.rs  basic_if6.rs  basic_if7.rs  basic_if8.rs  basic_if9.rs  basic_match2.rs  basic_match4.rs  basic_mutref.rs  basic_mutref2.rs  basic_ref.rs  basic_ref2.rs  basic_ref4.rs  basic_ref5.rs  basic_struct.rs  basic_while.rs  borrow_empty_block.rs  box_dyn.rs  box_string.rs  (+96 more)
rustviz2/: Cargo.toml  README.md
rustviz2-plugin/: Cargo.toml  README.md
rustviz2-plugin/src/: expr_visitor.rs  lib.rs  mir_data.rs  plugin.rs  visitor.rs
rustviz2-plugin/tests/: aliasing1.rs  anonymous_copy2caller.rs  basic_alias.rs  basic_deref4.rs  basic_deref6.rs  basic_for.rs  basic_for3.rs  basic_if3.rs  basic_match.rs  basic_match3.rs  basic_ref3.rs  blocks_basic.rs  mutAssignOp.rs  mutableReferences.rs  ownershipFunctions.rs  testMove.rs  variablesMutability.rs
rustviz2/examples/: render_to_files.rs
rustviz2/src/: lib.rs
rustviz2/tests/: borrow.rs  corpus.rs
src/svg_generator/: Cargo.toml  README.md  data.rs  hover_messages.rs
src/svg_generator/svg_frontend/: code_panel.rs  lifetime_vis.rs  line_styles.rs  mod.rs  svg_generation.rs  timeline_panel.rs  utils.rs
src/svg_generator/templates/: book_svg_style.css
svg_generator/: Cargo.toml
svg_generator/examples/ReadMe/: main.rs
svg_generator/examples/copy/: main.rs
svg_generator/examples/dsl_test/: main.rs
svg_generator/examples/error_borrow_mutably_borrowed/: source.rs
svg_generator/examples/error_reassign_immutably_borrowed/: source.rs
svg_generator/examples/func_take_ownership/: main.rs  source.rs
svg_generator/examples/func_take_return_ownership/: main.rs
svg_generator/examples/hatra1/: main.rs  source.rs
svg_generator/examples/hatra2/: main.rs  source.rs
svg_generator/examples/immutable_borrow/: main.rs  source.rs
svg_generator/examples/immutable_borrow_method_call/: main.rs
svg_generator/examples/move_different_scope/: main.rs
svg_generator/examples/move_func_return/: main.rs
svg_generator/examples/multiple_immutable_borrow/: main.rs  source.rs
svg_generator/examples/mutable_borrow/: main.rs  source.rs
svg_generator/examples/mutable_borrow_method_call/: main.rs
svg_generator/examples/nll_lexical_scope_different/: main.rs  source.rs
svg_generator/examples/simple/: main.rs
svg_generator/examples/string_from/: main.rs  source.rs
svg_generator/examples/string_from_move_print/: main.rs
svg_generator/examples/string_from_print/: main.rs  source.rs
svg_generator/examples/struct_rect/: main.rs
svg_generator/examples/struct_string/: main.rs
svg_generator/examples_dsl/copy/: main.rs
svg_generator/examples_dsl/func_take_return_ownership/: main.rs
svg_generator/examples_dsl/function/: main.rs
svg_generator/examples_dsl/hatra1/: main.rs
svg_generator/examples_dsl/immutable_borrow_method_call/: main.rs
svg_generator/examples_dsl/move_different_scope/: main.rs
svg_generator/examples_dsl/multiple_immutable_borrow/: main.rs
svg_generator/examples_dsl/mutable_borrow/: main.rs
svg_generator/examples_dsl/printing/: main.rs
svg_generator/examples_dsl/string_from_print/: main.rs
svg_generator/src/: data.rs  hover_messages.rs
svg_generator/svg_frontend/: book_svg_style.css  code_panel.rs  line_styles.rs  mod.rs  svg_generation.rs  timeline_panel.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+607 files in other folders)
