[package]
name = "rustviz-cli"
version = "2.0.0"
edition = "2021"
authors = ["Cyrus Omar <comar@umich.edu>", "Andrew Mahler <mahleran@umich.edu>"]
repository = "https://github.com/rustviz/rustviz"
license = "MIT"
description = "Command-line interface for RustViz: render a Rust source file to ownership/borrow SVGs (`rustviz svg`, `rustviz html`, `rustviz init`)."
readme = "README.md"

[[bin]]
name = "rustviz"
path = "src/main.rs"

[dependencies]
rustviz-lib = { path = "../rustviz-lib", version = "2.0.0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
