[package]
name = "rustviz"
version = "0.1.0"
authors = ["Gabriel Luo <luogm@umich.edu>", "Ke Du <madoka@umich.edu>", "Yingying Zhu <zyy@umich.edu>", "Marcelo Almeida <mgba@umich.edu>", "Haochen Zhang <haochenz@umich.edu>", "Vishnu Reddy <reddyvis@umich.edu>"]
edition = "2018"

[lib]
name = "rustviz_lib"
path = "src/lib.rs"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false

[[example]]
name = "hatra1"

[[example]]
name = "hatra2"

[[example]]
name = "string_from"

[[example]]
name = "string_from_print"

[[example]]
name = "string_from_move_print"

[dependencies]
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
