[package]
name = "rustviz_library"
version = "0.1.0"
edition = "2021"

authors = [
    "Marcelo Almeida <mgba@umich.edu>", "Gongming (Gabriel) Luo <luogm@umich.edu>",
    "Ke Du <madoka@umich.edu>", "Yingying Zhu <zyy@umich.edu>", 
    "Haochen Zhang <haochenz@umich.edu>", "Vishnu Reddy <reddyvis@umich.edu>",
    "Yu Pan <panyu@umich.edu>"
]
license = "MIT"
description = "A tool that allows teachers to generate an interactive timeline depicting ownership and borrowing events for each variable in a Rust code example"
repository = "https://github.com/rustviz/rustviz"

[dependencies]
anyhow = "1"
rustviz-svg = { path = "src/svg_generator/" }